--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1628.0",
+    "body-parser": "^1.20.2",
     "express": "^4.19.2",
     "ws": "^8.17.0"
   }
